# AstarSocialFiDapp

./: README.md
Astar/: .gitignore
backend/: Cargo.toml  lib.rs
backend/src/: FT.rs  follow.rs  lib.rs  message.rs  metadata.rs  post.rs  profile.rs
frontend/: .eslintrc.json  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/components/: bottomNavigation.tsx  message.tsx  messageRoom.tsx  message_member.tsx  post.tsx  postModal.tsx  profileSettingModal.tsx  profileSubTopBar.tsx  topBar.tsx
frontend/components/atoms/: appLogo.tsx  balance.tsx  bigInput.tsx  biggerProfileIcon.tsx  bottomLogo.tsx  closeButton.tsx  disconnectButton.tsx  inputBox.tsx  postButton.tsx  profileTitle.tsx  sendButton.tsx  smallInput.tsx  smallerProfileIcon.tsx  submitButton.tsx  walletAddressSelection.tsx
frontend/components/molecules/: formBox.tsx  headerProfile.tsx  profileList.tsx
frontend/components/organisms/: footer.tsx  header.tsx  inputGroup.tsx  messageBar.tsx
frontend/contract/: metadata.json
frontend/hooks/: FT.tsx  connect.tsx  messageFunction.tsx  postFunction.tsx  profileFunction.tsx
frontend/pages/: home.tsx  index.tsx  message.tsx  profile.tsx
